[project]
name = "n8nHelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "numpy>=2.4.2",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "streamlit-desktop-app>=0.3.4",
]

[dependency-groups]
dev = [
    "pyside6>=6.10.2",
    "qtpy>=2.4.3",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
