[project]
name = "n8nHelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "numpy>=2.4.2",
    "requests>=2.32.5",
    "textual>=8.0.0",
]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
